MARP-2309 process analyzer include analysis of loops in callable subs (#115)